[package]
name = "rs-can-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
colorful = "0.2.1"
libc = "0.2.133"
ifstructs = "0.1.1"
run_script = "0.10.0"

[[bin]]
name = "colorshell"
path = "src/main2.rs"

[[bin]]
name = "rscansend"
path = "src/cansend.rs"

[[bin]]
name = "rscandump"
path = "src/candump.rs"

[[bin]]
name = "rscangen"
path = "src/cangen.rs"

[[bin]]
name = "rscanbusload"
path = "src/canbusload.rs"

[[bin]]
name = "rscanplayer"
path = "src/canplayer.rs"